--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LRG9M76WK5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LRG9M76WK5');
+</script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/lg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
